20000317-01:09 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/rtl/console.c
     - Removed the non-GT branch from __ACCEPT().
   * source/vm/cmdarg.c
     + PC ANSI added.
     - non-GT mode removed.
   * source/rtl/gt/gt*.c
     ! Fixed some trace calls.
     ! One declaration made static.
     ! One function call fixed in GTCRS.C.

20000317-00:13 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/rtl/gt/gtpca.c
     + Some internal functions made static
   * makefile.bc
     ! It's not relying on the default CC and AS macros, to make it work
       on BCC45 without any cludges. BCC45 MAKE.EXE is defaulting to bcc or 
       bcc32 depending on the WIN32 macro.
   * source/rtl/maindll.c
     ! Fixed to compile with BCC45
   * source/rtl/console.c
     ! Some fixes later fixed again (see next session).

20000316-04:10 EST Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/gt/gtpca.c
     * added casts

20000316-02:50 EST Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/gtapi.c
     * removed extraneous ';'

2000-03-16 02:30 GMT-5 David G. Holm <dholm@ sd-llc.com>
   * include/hbapigt.h
   * include/hbsetup.h
   * source/rtl/console.c
   * source/rtl/gtapi.c
   * source/rtl/gtxxx.c
   * source/rtl/gt/gt_tpl.c
   * source/rtl/gt/gtcrs.c
   * source/rtl/gt/gtdos.c
   * source/rtl/gt/gtos2.c
   * source/rtl/gt/gtsln.c
   * source/rtl/gt/gtstd.c
   * source/rtl/gt/gtwin.c
     - Removed all occurrences of HARBOUR_USE_GTAPI from console.c.
     + Added hb_gtAdjustPos() to console.c, gtapi.c and hbapigt.h.
     + Added hb_gt_AdjustPos() to all gt/ sources and hbapigt.h.
     + Added rudimentary PC ANSI.SYS low-level driver (gtpca.c,
       which is missing stuff such as scrolling screen regions).
     + Added HB_GT_PCA to hbsetup.h and gtxxx.c (in fact, I replaced
       HB_GT_STD with HB_GT_PCA in gtxxx.c, because the default case
       is to use HB_GT_STD).

20000316-02:04 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/pp/ppcore.c