@@ -258,7 +258,7 @@ HARBOUR HB_ADSCLEARAOF( void )
       hb_errRT_DBCMD( EG_NOTABLE, 2001, NULL, "ADSCLEARAOF" );
 }
 
-HARBOUR HB_ADCUSTOMIZEAOF( void )
+HARBOUR HB_ADSCUSTOMIZEAOF( void )
 {
    ADSAREAP pArea;
    UNSIGNED32 pulRecords[1];
