@@ -64,6 +64,7 @@ PATHNAMES * hb_comp_pIncludePath = NULL;
 PHB_FNAME   hb_comp_pFileName = NULL;
 FILES       hb_comp_files;
 int         hb_comp_iLine = 1; /* currently parsed file line number */
+extern      int nEmptyStrings;
 
 /* These are need for the PP #pragma support */
 BOOL hb_comp_bPPO = FALSE;                      /* flag indicating, is ppo output needed */
@@ -234,10 +235,11 @@ int hb_pp_Parse( FILE * handl_o )
   char * ptr;
   int lContinue;
   int lens, rdlen;
-  int nEmptyStrings = 0, lLine = 0, i;
+  int lLine = 0, i;
 
   HB_TRACE(HB_TR_DEBUG, ("PreProcess(%p, %p, %s)", handl_o, sOut));
 
+  nEmptyStrings = 0;
   while( TRUE )
   {
      pFile = hb_comp_files.pLast;
